# langchain-rag

./: .env  pyproject.toml
src/langchain_rag/: app.py
